# NPU-Demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_ball_model.py  generate_model.py  npu_water_sim.sln  npu_water_sim.vcxproj  plugins.xml
src/: main.cpp
